feat: add parameters for ESQL queries
https://github.com/kestra-io/plugin-elasticsearch/issues/86